# Venachain-CDT

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: InstallCDT.cmake  LLVMExternalProject.txt  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  VenachainCDTMacros.cmake.in  VenachainWasmToolchain.cmake.in  venachain.cdt-config.cmake
libraries/: CMakeLists.txt
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: locale
libraries/libc/musl/include/bits/: stddef.h  stdint.h
libraries/venachainlib/: CMakeLists.txt
libraries/venachainlib/include/bcwasm/: RLP.h  bcwasm.hpp  common.h  crypto.hpp  event.hpp  varint.hpp
libraries/venachainlib/include/bcwasm/db/: map.hpp
libraries/venachainlib/src/: RLP.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  array.cpp  bigint.cpp  compiler_builtins.cpp  container.cpp  convert.cpp  datastream.cpp  deployedcontract.cpp  event.cpp  fixedhash.cpp  list.cpp  log.h  map.cpp  print.cpp  return.cpp  rlp.cpp  state.cpp  storagetype.cpp  storagetype_special.cpp  unittest.hpp
tools/: CMakeLists.txt
tools/abi/: AbiDef.h  AbiGenerator.cpp  AbiGenerator.h  AbiJson.cpp  AbiJson.h  AbiMacro.cpp  AbiMacro.h  CMakeLists.txt  Common.h  Exception.h  StringUtil.cpp  StringUtil.h  Template.cpp  Template.h  main.cpp
tools/cpp/: CMakeLists.txt  venachain-cpp.cpp
tools/include/: options.hpp
tools/include/venachain/: Log.cpp  Log.h  utils.hpp
tools/init/: CMakeLists.txt  venachain-init.cpp
tools/ld/: CMakeLists.txt  venachain-ld.cpp
venachain_llvm/tools/clang/include/clang/AST/: DeclCXX.h
venachain_llvm/tools/clang/include/clang/Basic/: Attr.td  AttrDocs.td
venachain_llvm/tools/clang/lib/Sema/: SemaDeclAttr.cpp
